Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9336

qml runtime asserts with "!prop->isEmpty()" in file qml/qdeclarativecompiler.cpp

XMLWordPrintable

      Loading following file with the runtime from an up-to-date qt asserts:

      import Qt 4.6
      
      Rectangle {
          MouseArea {
              anchors.fill: parent
              onClicked {
              }
          }
      }
      

      Stacktrace

      ASSERT: "!prop->isEmpty()" in file qml/qdeclarativecompiler.cpp, line 1334
      #0  0x00207422 in __kernel_vsyscall ()
      #1  0x014384d1 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #2  0x0143b932 in *__GI_abort () at abort.c:92
      #3  0x07cb43af in qt_message_output (msgType=QtFatalMsg, buf=0x8c79848 "ASSERT: \"!prop->isEmpty()\" in file qml/qdeclarativecompiler.cpp, line 1334") at /home/kkoehne/dev/qt/qt-master/src/corelib/global/qglobal.cpp:2253
      #4  0x07cb45a8 in qt_message (msgType=QtFatalMsg, msg=0x7e5eb08 "ASSERT: \"%s\" in file %s, line %d", ap=0xbfd38954 "R\210", <incomplete sequence \355>) at /home/kkoehne/dev/qt/qt-master/src/corelib/global/qglobal.cpp:2299
      #5  0x07cb49c6 in qFatal (msg=0x7e5eb08 "ASSERT: \"%s\" in file %s, line %d") at /home/kkoehne/dev/qt/qt-master/src/corelib/global/qglobal.cpp:2482
      #6  0x07cb3f48 in qt_assert (assertion=0xed8852 "!prop->isEmpty()", file=0xed8590 "qml/qdeclarativecompiler.cpp", line=1334) at /home/kkoehne/dev/qt/qt-master/src/corelib/global/qglobal.cpp:2016
      #7  0x00de370c in QDeclarativeCompiler::buildSignal (this=0xbfd38edc, prop=0x8c8acf0, obj=0x8c8a7a8, ctxt=...) at qml/qdeclarativecompiler.cpp:1334
      #8  0x00ddf968 in QDeclarativeCompiler::buildObject (this=0xbfd38edc, obj=0x8c8a7a8, ctxt=...) at qml/qdeclarativecompiler.cpp:783
      #9  0x00de798b in QDeclarativeCompiler::buildListProperty (this=0xbfd38edc, prop=0x8c8a8d0, obj=0x8c8a610, ctxt=...) at qml/qdeclarativecompiler.cpp:1907
      #10 0x00de4cee in QDeclarativeCompiler::buildProperty (this=0xbfd38edc, prop=0x8c8a8d0, obj=0x8c8a610, ctxt=...) at qml/qdeclarativecompiler.cpp:1499
      #11 0x00ddfc80 in QDeclarativeCompiler::buildObject (this=0xbfd38edc, obj=0x8c8a610, ctxt=...) at qml/qdeclarativecompiler.cpp:812
      #12 0x00ddedc4 in QDeclarativeCompiler::compileTree (this=0xbfd38edc, tree=0x8c8a610) at qml/qdeclarativecompiler.cpp:625
      #13 0x00ddec94 in QDeclarativeCompiler::compile (this=0xbfd38edc, engine=0x8b79cf8, unit=0x8c789b0, out=0x8c794b8) at qml/qdeclarativecompiler.cpp:600
      #14 0x00e0d913 in QDeclarativeCompositeTypeData::toCompiledComponent (this=0x8c789b0, engine=0x8b79cf8) at qml/qdeclarativecompositetypemanager.cpp:134
      #15 0x00dccfc6 in QDeclarativeComponentPrivate::fromTypeData (this=0x8c797a8, data=0x8c789b0) at qml/qdeclarativecomponent.cpp:161
      #16 0x00dcdfae in QDeclarativeComponent::loadUrl (this=0x8c78248, url=...) at qml/qdeclarativecomponent.cpp:443
      #17 0x00dcd810 in QDeclarativeComponent (this=0x8c78248, engine=0x8b79cf8, url=..., parent=0x8b64390) at qml/qdeclarativecomponent.cpp:332
      #18 0x00cc8a09 in QDeclarativeViewPrivate::execute (this=0x8b79cd0) at /home/kkoehne/dev/qt/qt-master/src/declarative/util/qdeclarativeview.cpp:162
      #19 0x00cc913e in QDeclarativeView::setSource (this=0x8b64390, url=...) at /home/kkoehne/dev/qt/qt-master/src/declarative/util/qdeclarativeview.cpp:302
      #20 0x0806179f in QDeclarativeViewer::openQml (this=0xbfd39280, file_or_url=...) at qmlruntime.cpp:1077
      #21 0x0805f553 in QDeclarativeViewer::open (this=0xbfd39280, doc=...) at qmlruntime.cpp:888
      #22 0x08058a87 in main (argc=2, argv=0xbfd39574) at main.cpp:346
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aakenned Aaron Kennedy
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes