Remove faulty assert - the precondition is checked for correctly later on

Task-number: QTBUG-9336